install and uninstall listeners removed cli interface added common config to buildSrc