@@ -1,8 +1,10 @@
 package com.agentengine.conventions;
 
+import com.diffplug.gradle.spotless.SpotlessExtension;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.plugins.JavaPluginExtension;
+import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.compile.JavaCompile;
 import org.gradle.api.tasks.testing.Test;
 import org.gradle.jvm.toolchain.JavaLanguageVersion;
@@ -10,6 +12,9 @@ import org.gradle.jvm.toolchain.JavaLanguageVersion;
 public class JavaBaseConventionsPlugin implements Plugin<Project> {
   @Override
   public void apply(final Project project) {
+    project.getPluginManager().apply("java");
+    project.getPluginManager().apply("com.diffplug.spotless");
+
     project
         .getExtensions()
         .configure(
@@ -21,6 +26,22 @@ public class JavaBaseConventionsPlugin implements Plugin<Project> {
                     .set(JavaLanguageVersion.of(21)));
 
     project
+        .getExtensions()
+        .configure(
+            SpotlessExtension.class,
+            spotless -> {
+              spotless.java(java -> java.googleJavaFormat("1.22.0"));
+              spotless.format(
+                  "misc",
+                  misc ->
+                      {
+                        misc.target("*.md", ".gitignore", "*.yml", "*.yaml");
+                        misc.trimTrailingWhitespace();
+                        misc.endWithNewline();
+                      });
+            });
+
+    project
         .getTasks()
         .withType(JavaCompile.class)
         .configureEach(task -> task.getOptions().getCompilerArgs().add("--enable-preview"));
@@ -28,6 +49,15 @@ public class JavaBaseConventionsPlugin implements Plugin<Project> {
     project
         .getTasks()
         .withType(Test.class)
+        .configureEach(
+            task -> {
+              task.useJUnitPlatform();
+              task.jvmArgs("--enable-preview");
+            });
+
+    project
+        .getTasks()
+        .withType(JavaExec.class)
         .configureEach(task -> task.jvmArgs("--enable-preview"));
   }
 }
